--- a/DataAccessLayer/DataAccessLayer.csproj
+++ b/DataAccessLayer/DataAccessLayer.csproj
@@ -105,6 +105,10 @@
     <Compile Include="Migrations\202107100326361_mig_countmessage.designer.cs">
       <DependentUpon>202107100326361_mig_countmessage.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202107101443501_mig_contactdate.cs" />
+    <Compile Include="Migrations\202107101443501_mig_contactdate.designer.cs">
+      <DependentUpon>202107101443501_mig_contactdate.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -145,6 +149,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202107100326361_mig_countmessage.resx">
       <DependentUpon>202107100326361_mig_countmessage.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202107101443501_mig_contactdate.resx">
+      <DependentUpon>202107101443501_mig_contactdate.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
