--- a/MvcProjeKampi/MvcProjeKampi.csproj
+++ b/MvcProjeKampi/MvcProjeKampi.csproj
@@ -2027,6 +2027,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="screenshots\TalentPage.PNG" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="AdminLTE-3.0.4\.babelrc" />
